--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "third_party/msgpuck"]
 	path = third_party/msgpuck
-	url = https://github.com/tarantool/msgpuck.git
+	url = https://github.com/parihaaraka/msgpuck
+	branch = master
