mp_reader redesigned, switch to C++20

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ set(CMAKE_COLOR_MAKEFILE   ON)
 
 add_subdirectory(third_party/msgpuck)
 
-set (CMAKE_CXX_STANDARD 17)
+add_compile_definitions(MP_READER2)
+
+set (CMAKE_CXX_STANDARD 20)
 file(GLOB LIB_FILES *.cpp third_party/*.c)
 if(NOT DEFINED CPP2TNT_LIBEV)
     message("libev-related sources disabled (define CPP2TNT_LIBEV to enable it)")
@@ -17,3 +19,4 @@ endif()
 add_library(${PROJECT_NAME} STATIC ${LIB_FILES})
 target_include_directories(${PROJECT_NAME} PUBLIC . third_party)
 target_link_libraries(${PROJECT_NAME} msgpuck)
+
