--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_COLOR_MAKEFILE   ON)
 
 set(CMAKE_CXX_STANDARD 20)
 
+add_compile_definitions(MP_READER2)
+
 file(GLOB SRC_FILES *.cpp "${CMAKE_SOURCE_DIR}/../third_party/*.c")
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 set(CPP2TNT_LIBEV true) # compile libev wrapper
